[FEATURE] Permission API, Logging to Discord - Add logging to Discord - Add permission API, permission list pages - Update userlist pages - Update rolelist pages - Update swagger documentation
