# laravel/app/OpenApi/Schemas/PermissionSchema.php
@@ -3,8 +3,8 @@ namespace App\OpenApi\Schemas;
 
 use OpenApi\Attributes as OA;
 
-#[OA\Schema(schema: 'Roles', required: ['role_name'])]
-final class RoleSchema {
+#[OA\Schema(schema: 'Permissions', required: ['permission_name'])]
+final class PermissionSchema {
     #[OA\Property(property: 'id', type: 'integer', example: '1')]
     #[OA\Property(property: 'name', type: 'string', example: 'admin', uniqueItems: true)]
     #[OA\Property(property: 'description', type: 'string', example: 'web' )]
